Introduce revealables jQuery plugin
This is the first of a number of jQuery plugins that will replace
existing JavaScript so that user interactions are more composable.

--- a/app/assets/stylesheets/_multiples.scss
+++ b/app/assets/stylesheets/_multiples.scss
@@ -28,7 +28,9 @@
   }
 
   .destroy {
-    @extend .hidden-but-accessible;
+    .js-enabled & {
+      @extend .hidden-but-accessible;
+    }
   }
 
   .destroy:focus + label {
