--- a/app/views/escorts/show.html.erb
+++ b/app/views/escorts/show.html.erb
@@ -9,12 +9,11 @@
     </header>
 
     <%= form_for form, url: form.url, method: :put do |f| %>
-        <%= render('shared/flashes/save_errors', object: f.object) %>
-        <%= render('shared/flashes/save_confirmation') %>
-        <%= render form.template, f: f %>
-        <div class="form-group">
-          <%= f.submit t('.save'), class: 'button' %>
-        </div>
+      <%= cell(:messages, f.object) %>
+      <%= render form.template, f: f %>
+      <div class="form-group">
+        <%= f.submit t('.save'), class: 'button' %>
+      </div>
     <% end %>
   </div>
 </div>
