Introduce menu cell

--- a/app/views/escorts/show.html.erb
+++ b/app/views/escorts/show.html.erb
@@ -1,7 +1,6 @@
 <div class="grid-row">
   <div class="column-one-quarter">
-    <%= render('shared/navigation') %>
-    <%= render('shared/quick_actions') %>
+    <%= cell(:menu, escort) %>
   </div>
   <div class="column-three-quarters">
     <header>
