--- a/app/cells/escort_form/toggle_with_details_field.erb
+++ b/app/cells/escort_form/toggle_with_details_field.erb
@@ -1,3 +1,3 @@
-<%= text_toggle_container(f, attribute, i18n_scope) do %>
-  <%= details_text_area_with_help_text(f, attribute, i18n_scope) %>
+<%= text_toggle_container(f, attribute) do %>
+  <%= details_text_area_with_help_text(f, attribute) %>
 <% end %>
