fixup! Introduce escort form cell

--- a/app/cells/escort_form/move.erb
+++ b/app/cells/escort_form/move.erb
@@ -8,7 +8,7 @@
           f: f,
           model: 'move',
           date_field: 'date_of_travel',
-          hint: f.object.formatted_date_today
+          hint: model.formatted_date_today
         } %>
   <% end %>
 </div>
