--- a/app/cells/escort_form/healthcare.erb
+++ b/app/cells/escort_form/healthcare.erb
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="medications">
-        <% f.object.medications.each_with_index do |m, index| %>
+        <% model.medications.each_with_index do |m, index| %>
           <%= f.fields_for "medications[#{index}]", m do |mf| %>
             <div id="medication-<%= mf.index %>" class="inner-row item <%= 'shown' if m.persisted? %>">
               <div class="inner-col-one-third">
@@ -51,7 +51,7 @@
               <div class="inner-col-one-third">
                 <div class="inner-col-two-thirds">
                   <%= mf.label :carrier, class: 'medication-field-label' %>
-                  <%= mf.select :carrier, f.object.carrier_options, include_blank: true %>
+                  <%= mf.select :carrier, model.carrier_options, include_blank: true %>
                 </div>
                 <% if index > 0 %>
                   <div class="inner-col-one-third">
